src/OpenCvSharpExtern/core_Mat.h

CVAPI(int) core_Mat_depth(cv::Mat *self)
{
    return self->depth();
}
     
CVAPI(cv::Mat*) core_Mat_diag1(cv::Mat *self)
{
    cv::Mat ret = self->diag();
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_diag2(cv::Mat *self, int d)
{
    cv::Mat ret = self->diag(d);
    return new cv::Mat(ret);
}
CVAPI(double) core_Mat_dot(cv::Mat *self, cv::Mat *m)
{
    return self->dot(*m);
}
CVAPI(uint64) core_Mat_elemSize(cv::Mat *self)
{
    return self->elemSize();
}
CVAPI(uint64) core_Mat_elemSize1(cv::Mat *self)
{
    return self->elemSize1();
}
CVAPI(int) core_Mat_empty(cv::Mat *self)
{
    return self->empty() ? 1 : 0;
}
CVAPI(cv::MatExpr*) core_Mat_eye(int rows, int cols, int type)
{    
    cv::MatExpr eye = cv::Mat::eye(rows, cols, type);
    cv::MatExpr *ret = new cv::MatExpr(eye);
    return ret;
}
CVAPI(cv::Mat*) core_Mat_inv1(cv::Mat *self)
{
    cv::Mat ret = self->inv();
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_inv2(cv::Mat *self, int method)
{
    cv::Mat ret = self->inv(method);
    return new cv::Mat(ret);
}
CVAPI(int) core_Mat_isContinuous(cv::Mat *self)
{
    return self->isContinuous() ? 1 : 0;
}
CVAPI(int) core_Mat_isSubmatrix(cv::Mat *self)
{
    return self->isSubmatrix() ? 1 : 0;
}
CVAPI(void) core_Mat_locateROI(cv::Mat *self, MyCvSize *wholeSize, MyCvPoint *ofs)
{
    cv::Size wholeSize2;
    cv::Point ofs2;
    self->locateROI(wholeSize2, ofs2);
    *wholeSize = c(cv::Size(wholeSize2.width, wholeSize2.height));
    *ofs = c(cv::Point(ofs2.x, ofs2.y));
}
 

CVAPI(cv::MatExpr*) core_Mat_mul1(cv::Mat *self, cv::Mat *m)
{
    cv::MatExpr ret = self->mul(*m);
    return new cv::MatExpr(ret);
}
CVAPI(cv::MatExpr*) core_Mat_mul2(cv::Mat *self, cv::Mat *m, double scale)
{
    cv::MatExpr ret = self->mul(*m, scale);
    return new cv::MatExpr(ret);
}
CVAPI(cv::MatExpr*) core_Mat_ones1(int rows, int cols, int type)
{
    cv::MatExpr ret = cv::Mat::ones(rows, cols, type);
    return new cv::MatExpr(ret);
}
CVAPI(cv::MatExpr*) core_Mat_ones2(int ndims, const int *sz, int type)
{
    //cv::MatExpr ret = cv::Mat::ones(ndims, sz, type);
    //return new cv::MatExpr(ret);
    return NULL;
}
CVAPI(cv::Mat*) core_Mat_reshape1(cv::Mat *self, int cn)
{
    cv::Mat ret = self->reshape(cn);
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_reshape2(cv::Mat *self, int cn, int rows)
{
    cv::Mat ret = self->reshape(cn, rows);
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_reshape3(cv::Mat *self, int cn, int newndims, const int* newsz)
{
    cv::Mat ret = self->reshape(cn, newndims, newsz);
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_row_toMat(cv::Mat *self, int y)
{
    cv::Mat ret = self->row(y);
    return new cv::Mat(ret);
}
CVAPI(cv::MatExpr*) core_Mat_row_toMatExpr(cv::Mat *self, int y)
{
    cv::Mat ret = self->row(y);
    return new cv::MatExpr(ret);
}
CVAPI(cv::Mat*) core_Mat_rowRange_toMat(cv::Mat *self, int startRow, int endRow)
{
    cv::Mat ret = self->rowRange(startRow, endRow);
    return new cv::Mat(ret);
}
CVAPI(cv::MatExpr*) core_Mat_rowRange_toMatExpr(cv::Mat *self, int startRow, int endRow)
{
    cv::Mat ret = self->rowRange(startRow, endRow);
    return new cv::MatExpr(ret);
}
CVAPI(int) core_Mat_rows(cv::Mat *self)
{
    return self->rows;
}
CVAPI(cv::Mat*) core_Mat_setTo_Scalar(cv::Mat *self, MyCvScalar value, cv::Mat *mask)
{
    // crash
    // core_Mat_setTo_Scalar(cv::Mat *self, MyCvScalar value, cv::InputArray *mask)

    cv::Mat ret;
    if (mask == NULL)
        ret = self->setTo(cpp(value));
    else 
        ret = self->setTo(cpp(value), entity(mask));
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_setTo_InputArray(cv::Mat *self, cv::_InputArray *value, cv::Mat *mask)
{
    cv::Mat ret = self->setTo(*value, entity(mask));
    return new cv::Mat(ret);
}
CVAPI(MyCvSize) core_Mat_size(cv::Mat *self)
{
    return c(self->size());
}
CVAPI(int) core_Mat_sizeAt(cv::Mat *self, int i)
{
    int size = self->size[i];
    return size;
}
CVAPI(uint64) core_Mat_step11(cv::Mat *self)
{
    return self->step1();
}
CVAPI(uint64) core_Mat_step12(cv::Mat *self, int i)
{
    return self->step1(i);
}
CVAPI(uint64) core_Mat_step(cv::Mat *self)
{
    return self->step;
}
CVAPI(uint64) core_Mat_stepAt(cv::Mat *self, int i)
{
    return self->step[i];
}
CVAPI(cv::Mat*) core_Mat_subMat1(cv::Mat *self, int rowStart, int rowEnd, int colStart, int colEnd)
{
    cv::Range rowRange(rowStart, rowEnd);
    cv::Range colRange(colStart, colEnd);
    cv::Mat ret = (*self)(rowRange, colRange);
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_subMat2(cv::Mat *self, int nRanges, MyCvSlice *ranges)
{
    std::vector<cv::Range> rangesVec;
    for (int i = 0; i < nRanges; i++)
    {
        rangesVec.push_back(cpp(ranges[i]));
    }
    cv::Mat ret = (*self)(&rangesVec[0]);
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_t(cv::Mat *self)
{
    cv::Mat expr = self->t();
    return new cv::Mat(expr);
}
CVAPI(uint64) core_Mat_total(cv::Mat *self)
{
    return self->total();
}
CVAPI(int) core_Mat_type(cv::Mat *self)
{
    return self->type();
}
CVAPI(cv::MatExpr*) core_Mat_zeros1(int rows, int cols, int type)
{
    cv::MatExpr expr = cv::Mat::zeros(rows, cols, type);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_zeros2(int ndims, const int *sz, int type) // Not defined in .lib 
{
    //cv::MatExpr expr = cv::Mat::zeros(ndims, sz, type);
    //return new cv::MatExpr(expr);
    return NULL; 
}

CVAPI(uchar*) core_Mat_ptr1d(cv::Mat *self, int i0)
{
    return self->ptr(i0);
}
CVAPI(uchar*) core_Mat_ptr2d(cv::Mat *self, int i0, int i1)
{
    return self->ptr(i0, i1);
}
CVAPI(uchar*) core_Mat_ptr3d(cv::Mat *self, int i0, int i1, int i2)
{
    return self->ptr(i0, i1, i2);
}
CVAPI(uchar*) core_Mat_ptrnd(cv::Mat *self, int *idx)
{
    return self->ptr(idx);
}

CVAPI(void) core_Mat_reserve(cv::Mat *obj, size_t sz)
{
    obj->reserve(sz);
}
CVAPI(void) core_Mat_resize1(cv::Mat *obj, size_t sz)
{
    obj->resize(sz);
}
CVAPI(void) core_Mat_resize2(cv::Mat *obj, size_t sz, MyCvScalar s)
{
    obj->resize(sz, cpp(s));
}
CVAPI(void) core_Mat_pop_back(cv::Mat *obj, size_t nelems)
{
    obj->pop_back(nelems);
}
        
#pragma endregion
CVAPI(void) core_Mat_assignment_FromMat(cv::Mat *self, cv::Mat *newMat)
{
    *self = *newMat;
}
CVAPI(void) core_Mat_assignment_FromMatExpr(cv::Mat *self, cv::MatExpr *newMatExpr)
{
    *self = *newMatExpr;
}
CVAPI(void) core_Mat_assignment_FromScalar(cv::Mat *self, MyCvScalar scalar)
{
    *self = cpp(scalar);
}
CVAPI(void) core_Mat_IplImage(cv::Mat *self, IplImage *outImage)
{
    *outImage = IplImage();
    IplImage inImage = (IplImage)(*self);
    memcpy(outImage, &inImage, sizeof(IplImage));
}
CVAPI(void) core_Mat_IplImage_alignment(cv::Mat *self, IplImage **outImage)
{
    // キャストの結果を参考に使う.
    // メモリ管理の問題から、直接は使わない.
    IplImage dummy = (IplImage)(*self);
    // alignmentをそろえる
    IplImage *img = cvCreateImage(cvSize(dummy.width, dummy.height), dummy.depth, dummy.nChannels);
    int height = img->height;
    size_t sstep = self->step;
    size_t dstep = img->widthStep;
    for (int i = 0; i < height; ++i)
    {
        char *dp = img->imageData + (dstep * i);
        char *sp = (char*)(self->data) + (sstep * i);
        memcpy(dp, sp, sstep);
    }
    *outImage = img;
}
CVAPI(void) core_Mat_CvMat(cv::Mat *self, CvMat *outMat)
{
    *outMat = CvMat();
    CvMat inMat = (CvMat)(*self);
    memcpy(outMat, &inMat, sizeof(CvMat));
}